# diffgraft

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  build.sh  third-prompt
.claude/: CLAUDE.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Attribution.tsx  DetailsPopup.tsx  DiffPaneTable.tsx  DiffTable.tsx  DropZone.tsx  FileDropzone.tsx  FilePane.tsx  HeaderBar.tsx  PrimaryKeySelector.tsx  SchemaDiff.tsx  SideBySideDiffTable.tsx  WorkspaceLayout.tsx
apps/desktop/src/lib/: diffgraft.ts
apps/desktop/src/types/: diffgraft.ts
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: DropZone.tsx  FilePane.tsx  FloatingNav.tsx  WorkspaceLayout.tsx
apps/web/src/lib/: diffgraft.ts  unifiedRows.ts
apps/web/src/wasm/: diffgraft_core.d.ts  (+3 more)
crates/diffgraft-core/: Cargo.toml
crates/diffgraft-core/src/: diff.rs  error.rs  export.rs  lib.rs  merge.rs  reader.rs  wasm.rs
prompts/: 01-first-prompt  02-second-prompt  04-fourth-prompt  05-fifth-prompt  06-sixth-prompt  07-seventh-prompt  08-eighth-prompt-ui-refinement  09-ninth-prompt-ui-navigation-buttons  10-tenth-prompt-insyncview  11-eleventh-prompt  12-prompt-fix-viewpane-sync-issue  13-prompt-pivot-to-webUI  14-readme-generation-prompt  README.md
ui-manual-testing/: 01-first-test
